<resources>
    <string name="app_name">ETicaretUygulamasi</string>
    <string name="intro_first_line">The Easy Shopping  Solution</string>
    <string name="intro_second_line">Shop is in your hand</string>
    <string name="btn_login">User Login Here</string>
    <string name="btn_user_siqnup">New User? Register here</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="user_login">USER LOGİN</string>
    <string name="registration_message">new user registration</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="contact_number">Contact number</string>
    <string name="btn_register">Register</string>
</resources>