<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/screenbg"
    tools:context=".MainActivity">
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
    <ImageView
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="-150sp"
        android:src="@drawable/new_logo" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_first_line"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorRedDark"
        android:textSize="25sp"
        android:layout_marginTop="-300sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_second_line"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:layout_marginTop="5sp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btnloginbg"
        android:text="@string/btn_login"
        android:textSize="20sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/colorWhite"
        android:id="@+id/btnUserLogin"/>
    <Button
        android:id="@+id/btnUserSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btnsignupbg"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:text="@string/btn_user_siqnup"
        android:textSize="20sp"
        android:textColor="@color/colorWhite" />
</LinearLayout>
