<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/screenbg">
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
    <ImageView
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="-250sp"
        android:src="@drawable/new_logo" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_login"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorRedDark"
        android:textSize="25sp"
        android:layout_marginTop="-400sp"
        android:layout_marginBottom="40sp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/userEmailWrapper">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userEmail"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"
            android:textColor="@color/colorRed"
            android:textSize="18sp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/userPasswordWrapper">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userPassword"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:textColor="@color/colorRed"
            android:textSize="18sp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnUserLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:text="@string/user_login"
        android:background="@drawable/btnloginbg"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="OR"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorRedDark"
        android:textSize="25sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="-250sp"/>
    <TextView
        android:id="@+id/userSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_user_siqnup"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorRedDark"
        android:textSize="25sp"
        android:layout_marginTop="250sp"
        android:layout_marginBottom="10sp"/>

</LinearLayout>